[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus_client"
version = "0.1.0"
description = "A Python package for Modbus TCP client communication"
authors = [
    {name = "prasanthchettri", email = "prasanthchettri3@gmail.com"},
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]